# ill

./: .gitignore  .travis.yml  README.md  Test.hs  example.ll  ill.cabal  package.yaml  stack.yaml  thrill.cabal
Ill/: Comment.tmPreferences  Ill.sublime-syntax  Ill.tmPreferences
app/: CodegenDebug.hs  Compile.hs  CoreDebug.hs  DesugarDebug.hs  Infer.hs  Interpreter.hs  Main.hs
app/Ill/: Options.hs
app/Thrill/: Options.hs
assets/: builtins.ll  prelude.ill  rts.c  rts.h  rts.ll
docs/: codegen-notes.md
examples/: adt.ill  basic.ill  binding_groups.ill  closure.ill  complex.ill  constant_folding.ill  parser.ill  simple_run.ill  simple_tc.ill  trait.ill  tree.ill
src/: Lib.hs  Simple.hs
src/Control/Monad/: Fresh.hs  Unify.hs
src/Ill/: BindingGroup.hs  Codegen.hs  CoreLint.hs  Desugar.hs  Error.hs  Infer.hs  Inference.hs  Interpret.hs  Parser.hs  Prelude.hs  Processor.hs  Quote.hs  Renamer.hs  Syntax.hs
src/Ill/Codegen/: Closure.hs  Monad.hs
src/Ill/Desugar/: Administrative.hs  BinOp.hs  Cases.hs  LambdaLift.hs  LambdaLifting.hs  Trait.hs
src/Ill/Infer/: Entail.hs  Kind.hs  Monad.hs  Types.hs
src/Ill/Inference/: Class.hs  Kind.hs  Substitution.hs  Type.hs
src/Ill/Parser/: Declaration.hs  Expression.hs  Lexer.hs  Literal.hs  Module.hs  Pattern.hs  Type.hs
src/Ill/Syntax/: Builtins.hs  Core.hs  Expression.hs  Kind.hs  Lexer.hs  Literal.hs  Name.hs  Parser.hs  Pattern.hs  Pretty.hs  Type.hs  Weeder.hs
src/Thrill/: BindingGroup.hs  Codegen.hs  CoreLint.hs  Desugar.hs  Error.hs  Infer.hs  Interpret.hs  Parser.hs  Prelude.hs  Renamer.hs  Syntax.hs
src/Thrill/Codegen/: Closure.hs  Monad.hs
src/Thrill/Desugar/: Administrative.hs  BinOp.hs  Cases.hs  LambdaLift.hs  LambdaLifting.hs  Trait.hs
src/Thrill/Infer/: Entail.hs  Kind.hs  Monad.hs  Types.hs
src/Thrill/Parser/: Declaration.hs  Expression.hs  Lexer.hs  Literal.hs  Module.hs  Pattern.hs  Type.hs
src/Thrill/Syntax/: Builtins.hs  Core.hs  Expression.hs  Kind.hs  Literal.hs  Name.hs  Pattern.hs  Pretty.hs  Type.hs  Weeder.hs
test/: SpecHelper.hs
test/Ill/: CoreSpec.hs  InferSpec.hs  InferenceSpec.hs  InterpSpec.hs  ParserSpec.hs  Quote.hs
test/Ill/Parser/: ExpressionSpec.hs  PatternSpec.hs  TypeSpec.hs
test/Ill/Syntax/: ParserSpec.hs
test/Thrill/: DesugarSpec.hs  InferSpec.hs  InterpSpec.hs
test/Thrill/Parser/: PatternSpec.hs
test/codegen/: codegen_2.ill  codegen_3.ill  codegen_4.ill  codegen_5.ill  codegen_6.ill  codegen_7.ill  codegen_8.ill  codegen_9.ill  literal_pattern.ill  simple_codegen.ill
test/core/: core_1.ill  core_10.ill  core_11.ill  core_12.ill  core_2.ill  core_3.ill  core_4.ill  core_5.ill  core_6.ill  core_7.ill  core_8.ill  core_9.ill
test/desugar/: captured_lambda.ill  desugar_1.ill  desugar_2.ill  desugar_3.ill  lambda_lifting.ill  simple_traits.ill  trait2.ill  trait_alias.ill
test/interpreter/: addition.ill  captured_lambda.ill  fixpoint.ill  lazy.ill  reified_dict.ill  super_trait.ill  toby1.ill  toby2.ill  toby3.ill
test/parser/success/: module.ill  no_trait_signature.ill  test_import.ill
test/parser/success/declaration/: test_basic_declaration.ill  test_impls.ill  test_import.ill  test_signatures.ill  test_traits.ill
test/parser/success/expression/: case_expr.ill  func_call_with_expr.ill  test_arith_operators.ill  test_if_expression.ill  test_lambda.ill  test_simple_terms.ill
test/parser/success/pattern/: test_patterns.ill
test/parser/success/type/: test_type_expressions.ill
test/renamer/: renamer_1.ill  renamer_2.ill
test/typechecker/: bug_1.ill  tc1.ill  tc10.ill  tc11_trait_decl.ill  tc12_ordering.ill  tc13.ill  tc14.ill  tc15_super_traits.ill  tc16.ill  tc17.ill  tc18.ill  tc19.ill  tc2.ill  tc20.ill  tc22.ill  tc23.ill  tc24.ill  tc25.ill  tc26.ill  tc3.ill  tc4.ill  tc5.ill  tc6.ill  tc7.ill  tc8.ill  tc9.ill  tc_21_nested_cases.ill  test_double_primitives.ill
test/typechecker/failure/: tc_ambiguity.ill  tc_bound_vars.ill  tc_insufficient_constraints.ill  tc_need_impl.ill  tc_need_super.ill
