name:                ill
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/xldenis/ill#readme
license:             BSD3
license-file:        LICENSE
author:              Xavier Denis
maintainer:          xldenis@gmail.com
copyright:           2016 Author Here
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Ill.Parser
                     , Ill.Parser.Declaration
                     , Ill.Parser.Expression
                     , Ill.Parser.Lexer
                     , Ill.Parser.Type
                     , Ill.Parser.Pattern
                     , Ill.Syntax
                     , Ill.Syntax.Pretty
  other-modules:       Ill.Syntax.Expression
                     , Ill.Syntax.Pattern
                     , Ill.Syntax.Type
                     , Ill.Syntax.Literal
                     , Simple
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , bound
                     , free
                     , text
                     , comonad
                     , wl-pprint-extras
                     , lens
  default-language:    Haskell2010

executable ill-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ill
                     , megaparsec
                     , wl-pprint-extras
                     , optparse-generic
  default-language:    Haskell2010

test-suite ill-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hspec-discover
                     , ill
                     , directory
                     , megaparsec
                     , hspec-megaparsec
                     , text
                     , filepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xldenis/ill
