name:                ill
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/xldenis/ill#readme
license:             BSD3
license-file:        LICENSE
author:              Xavier Denis
maintainer:          xldenis@gmail.com
copyright:           2016 Author Here
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Ill.Inference.Class
                     , Ill.Inference.Type
                     , Ill.Parser
                     , Ill.Parser.Declaration
                     , Ill.Parser.Expression
                     , Ill.Parser.Lexer
                     , Ill.Parser.Type
                     , Ill.Parser.Pattern
                     , Ill.Syntax
                     , Ill.Syntax.Pretty
                     , Ill.Inference
  other-modules:       Ill.Syntax.Expression
                     , Ill.Syntax.Pattern
                     , Ill.Syntax.Type
                     , Ill.Syntax.Literal
                     , Simple
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , free
                     , text
                     , comonad
                     , wl-pprint-extras
                     , lens
                     , mtl
  default-language:    Haskell2010

executable ill
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Infer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ill
                     , megaparsec
                     , wl-pprint-extras
                     , optparse-generic
                     , text
                     , mtl
  default-language:    Haskell2010

test-suite ill-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hspec-discover
                     , ill
                     , directory
                     , megaparsec
                     , hspec-megaparsec
                     , text
                     , filepath
                     , comonad
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xldenis/ill
